[package]
name = "sekiei"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
minify-html = "0.15.0"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = {version="1.0.218", features = ["derive"]}
serde_yaml = "0.9.34"
syntect = "5.2.0"
tera = "1.20.0"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
walkdir = "2.5.0"
warp = "0.3.7"
